@@ -18,6 +18,7 @@
 	js : removed --js-namespace, added $hxClasses
 	flash : output traces to native trace() when using -D fdb or -D nativeTrace
 	all : allowed abitrary string fields in anonymous objects
+	all : structure fields which are Null<X> are now optional (for constant values)
 
 2011-09-25: 2.08
 	js : added js.JQuery
